# ScalSALE

./: .gitignore  README.md  myb  myb.o2248443
Code_example/: Stress_model.md
ScalSALE_OMP/: README.md
ScalSALE_OMP/src/: CMakeLists.txt
ScalSALE_OMP/src/Boundary_conditions/: boundary_parameters.f90
ScalSALE_OMP/src/Boundary_conditions/Cell/: cell_boundary_condition.f90  lagrange_surface_cell.f90
ScalSALE_OMP/src/Boundary_conditions/Vertex/: CMakeLists.txt  boundary_mirror_2d.f90  boundary_mirror_3d.f90  slip_vertex_3d.f90
ScalSALE_OMP/src/CR/: cr.f90  delete_latest_checkpoints.py
ScalSALE_OMP/src/Datafiles/: datafile.json  datafile_3d.json  datafile_euler_sod_8p_3d.json  datafile_sedov_notwork.json  datafile_sedov_taylor.json  datafile_sedov_taylor_xy.json  datafile_sod_1d.json  datafile_sod_2d_euler.json  datafile_sod_2d_euler_scr.json  datafile_sod_2d_lagrange.json  datafile_sod_3d_2d.json  datafile_sod_vac.json  datafile_super.json  datafile_super_3d.json  pyramid_super.json
ScalSALE_OMP/src/Diagnostics/: CMakeLists.txt  diagnostic.f90  diagnostics_group.f90  silo_fortran_to_c_interface.f90  textual_diagnostic_hdf5.f90
ScalSALE_OMP/src/General/: CMakeLists.txt  data_4d.f90  general_utils.f90  geometry.f90
ScalSALE_OMP/src/Input/: datafile_object.f90  defaults.f90  replace_words.f90
ScalSALE_OMP/src/Main/: CMakeLists.txt  check_input.py  problem.f90  run.py
ScalSALE_OMP/src/Material/: CMakeLists.txt  material.f90  material_advect.f90
ScalSALE_OMP/src/Material/Equation_of_state/: CMakeLists.txt
ScalSALE_OMP/src/Mesh/: CMakeLists.txt  mesh.f90  mesh_base.f90
ScalSALE_OMP/src/Parallel/: communication.f90  communication_utils.f90  parallel_parameters.f90
ScalSALE_OMP/src/Quantities/: CMakeLists.txt  quantity.f90
ScalSALE_OMP/src/Quantities/Cell/: artificial_viscosity.f90  cell_mass.f90  cell_quantity.f90  energy.f90  num_materials_in_cells.f90  sound_velocity.f90  volume.f90
ScalSALE_OMP/src/Quantities/Vertex/: momentum.f90  velocity.f90  vertex_mass.f90
ScalSALE_OMP/src/Rezone_and_Advect/: advect.f90  rezone.f90
ScalSALE_OMP/src/Scripts/: \  clean  fort.41  make.sh  report1.nsys-rep  report1.sqlite  report11.qdrep  report11.sqlite  report13.qdrep  report13.sqlite  report14.qdrep  report14.sqlite  report16.qdrep  report16.sqlite  report17.qdrep  report17.sqlite  report18.qdrep  report18.sqlite  report19.qdrep  report19.sqlite  report2.nsys-rep  report2.sqlite  report20.qdrep  report20.sqlite  report21.qdrep  report21.sqlite  report22.qdrep  report22.sqlite  report23.qdrep  report23.sqlite  report24.qdrep  report24.sqlite  report25.qdrep  report25.sqlite  report26.qdrep  report26.sqlite  report27.qdrep  report27.sqlite  report28.qdrep  report28.sqlite  (+32 more)
ScalSALE_OMP/src/Time_step/: hydro_step.f90
ScalSALE_OMP/src/exec/: main
src/: CMakeLists.txt  files.txt
src/Boundary_conditions/: CMakeLists.txt
src/Boundary_conditions/Cell/: CMakeLists.txt  free_surface.f90  slip_cell.f90  slip_cell_3d.f90
src/Boundary_conditions/Vertex/: lagrange_surface_vertex.f90  no_slip_vertex_3d.f90  slip_vertex.f90  vertex_boundary_condition.f90
src/CR/: CMakeLists.txt
src/Datafiles/: datafile.json  datafile_3d.json  datafile_lagrange_1p_3d.json  datafile_pyramid_bc.json  datafile_sedov_taylor_3d.json  datafile_sedov_taylor_3d_1p_euler.json  datafile_sod.json  datafile_sod_1d_vaccum.json  datafile_sod_2d.json  datafile_sod_2d_cyl.json  datafile_sod_3d.json  datafile_sod_3d_1d.json
src/Diagnostics/: plot.f90  plot_diagnostic.f90  silo_diagnostic.f90  silo_module.c  textual_diagnostic.f90
src/General/: CMakeLists.txt  constants.f90  data.f90  general_utils.i90  geometry.f90  geometry.i90
src/Input/: CMakeLists.txt  datafile_object.f90
src/Main/: CMakeLists.txt  README  create_scr_conf.py  main.f90  main.i90  main.py  problem.f90  problem.i90  run.sh
src/Material/: material_base.f90
src/Material/Equation_of_state/: analytic.f90  equation_of_state.f90  ideal_gas.f90  steinberg.f90
src/Mesh/: mesh_3d.f90
src/Parallel/: CMakeLists.txt  communication_parameters.f90
src/Quantities/: quantity.i90
src/Quantities/Cell/: CMakeLists.txt  density.f90  material_quantity.f90  materials_in_cells.f90  materials_in_cells.i90  pressure.f90  temperature.f90  vof.f90  volume.f90
src/Quantities/Vertex/: CMakeLists.txt  acceleration.f90  coordinates.f90  velocity.f90  velocity.i90  vertex_mass.f90  vertex_quantity.f90
src/Rezone_and_Advect/: CMakeLists.txt  advect.f90  rezone.f90
src/Scripts/: clean  clean.sh  make.sh  make_no_run.sh  module_load.sh  run.sh  run_eclipse_debug.sh  run_slurm.sh  runtime_150_1.txt  scr_clean.sh  scr_clear_index.sh  script.sh  slurm_run.py  total_cell_mass_result.txt  total_pressure_result.txt  total_sie_result.txt  velocity_result.txt
src/Scripts/results/: ifort_basic
src/Time_step/: CMakeLists.txt  hydro_step.f90  hydro_step.i90  time.f90  time.i90
src/exec/: main
